--- a/ClubCloud.Afhangen.WebSite/Modules/Views/Elements.xml
+++ b/ClubCloud.Afhangen.WebSite/Modules/Views/Elements.xml
@@ -6,5 +6,6 @@
 		Path="Views"
 		Url="Views">
     <File Path="Views.js" Url="Views.js" />
+    <File Path="default.html" Url="default.html" />
   </Module>
 </Elements>
