--- a/ClubCloud.Afhangen.WebSite/Modules/Views/Default.html
+++ b/ClubCloud.Afhangen.WebSite/Modules/Views/Default.html
@@ -1,10 +1,52 @@
-﻿<div>
-    <div ng-controller="defaultController" ng-init="initializeController()">
-
-        <div style="padding-top:20px; ">
-            <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)"><div ng-bind-html="MessageBox"></div></alert>
+﻿<div class="content" ng-controller="defaultController" ng-init="initializeController()">
+    <div class="container">
+        <div class="content-top">
+            <div class="content-top1">
+                <div class=" col-md-4 grid-top">
+                    <div class="thumbnail">
+                        <div class="grid-at">
+                            <i class="glyphicon glyphicon-user"></i>
+                            <h3 class="grid">Contrary to popular</h3>
+                            <div class="clearfix">
+                            </div>
+                        </div>
+                        <p>
+                            Lorem Ipsum is not simply random text. It has roots in
+                            a piece of classical
+                        </p>
+                    </div>
+                </div>
+                <div class=" col-md-4 grid-top">
+                    <div class="thumbnail">
+                        <div class="grid-at">
+                            <i class="glyphicon glyphicon-tree-deciduous"></i>
+                            <h3 class="grid">Contrary to popular</h3>
+                            <div class="clearfix">
+                            </div>
+                        </div>
+                        <p>
+                            Lorem Ipsum is not simply random text. It has roots in
+                            a piece of classical
+                        </p>
+                    </div>
+                </div>
+                <div class=" col-md-4 grid-top">
+                    <div class="thumbnail">
+                        <div class="grid-at">
+                            <i class="glyphicon glyphicon-copy"></i>
+                            <h3 class="grid">Contrary to popular</h3>
+                            <div class="clearfix">
+                            </div>
+                        </div>
+                        <p>
+                            Lorem Ipsum is not simply random text. It has roots in
+                            a piece of classical
+                        </p>
+                    </div>
+                </div>
+                <div class="clearfix">
+                </div>
+            </div>
         </div>
-
-
     </div>
 </div>
